# Mmojo-Server-v2

./: 31-Prepare-to-Build.md  LICENSE  README.md  TO-DO.md
docs/: -Start-Here-TOC.md  -Start-Here.md  -Table-of-Contents.md  001-Documentation-TOC.md  001-Table-of-Contents.md  01-Documentation-TOC.md  1-Doumentation-TOC.md  10-Prepare-Build-Environment.md  100-Overview.md  100-Prepare-Build-Environment.md  101-Clone-Mmojo-Server-Repo.md  101-Project-Goals.md  102-Build-Environment.md  102-Project-Features.md  102-Set-Timezone.md  103-Build-Environment.md  103-Build-Targets.md  103-Create-Mmojo-Share.md  104-Build-Targets.md  104-Create-Mmojo-Share-Automated.md  104-Install-Dependencies.md  104-Packaging-for-Deployment.md  105-Contributing.md  105-Install-Dependencies.md  105-Set-up-Cross-Compile-aarch64-on-x86_64.md  106-Set-up-Cross-Compile-aarch64-on-x86_64.md  106-Set-up-Cross-Compile-x86_64-on-aarch64.md  107-Set-up-Cross-Compile-x86_64-on-aarch64.md  11-Clone-Mmojo-Server-Repo.md  12-Set-Timezone  12-Set-Timezone.md  13-Create-Mmojo-Share.md  14-Install-Dependencies.md  15-Set-up-Cross-Compile-aarch64-on-x86_64.md  16-Set-up-Cross-Compile-x86_64-on-aarch64.md  20-Gather-Build-Pieces.md  20-Gather-Build-Pieces.md BradHutchings  200-Gather-Build-Pieces.md  200-Prepare-Build-Environment.md  201-Clone-Mmojo-Server-Repo.md  (+97 more)
files/: Maintenance.md
files/tools/zipalign/: CMakeLists.txt  zip.c  zip.h  zipalign.c
instructions/: -Start-Here-TOC.md  100-Overview.md  101-Project-Goals.md  102-Project-Features.md  103-Build-Environment.md  104-Build-Targets.md  105-Packaging-for-Deployment.md  106-Contribute-and-Sponsor.md  106-Contributing-and-Sponsoring.md  106-Contributing.md  1501-Package-APE.md  200-Prepare-Build-Environment.md  201-Prepare-WSL.md  202-Create-Scripts-Directory.md  202-Create-Scripts-and-Tools-Directories.md  208-mm-Scripts.md  (+184 more)
(+455 files in other folders)
